--- a/src/main/resources/fi/utu/tech/gui/javafx/teht8/otherWindow.fxml
+++ b/src/main/resources/fi/utu/tech/gui/javafx/teht8/otherWindow.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -44,7 +45,11 @@
                <children>
                   <TextField />
                   <TextField />
-                  <TextField />
+                  <TextField>
+                     <effect>
+                        <SepiaTone />
+                     </effect>
+                  </TextField>
                </children>
             </HBox>
          </children>
