--- a/src/main/resources/fi/utu/tech/gui/javafx/teht10/otherWindow.fxml
+++ b/src/main/resources/fi/utu/tech/gui/javafx/teht10/otherWindow.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.SepiaTone?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
-
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <left>
@@ -44,12 +42,8 @@
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <TextField />
-                  <TextField />
-                  <TextField>
-                     <effect>
-                        <SepiaTone />
-                     </effect>
-                  </TextField>
+                  <TextField layoutX="10.0" layoutY="10.0" />
+                  <TextField layoutX="10.0" layoutY="10.0" />
                </children>
             </HBox>
          </children>
